[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-mcp-server"
version = "0.1.0"
description = "MCP Server für Ollama mit 28 Tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Robin Oliver Lucas", email = "robin@rl-dev.de"}
]
maintainers = [
    {name = "Robin Oliver Lucas", email = "robin@rl-dev.de"}
]
homepage = "https://rl-dev.de"
project-urls = {
    "Homepage" = "https://rl-dev.de",
    "Repository" = "https://rl-dev.de"
}
keywords = ["mcp", "ollama", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
ollama-mcp-server = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

